Update for latest changes

--- a/clients/index.html
+++ b/clients/index.html
@@ -1,3 +1,4 @@
+<!-- Built via Cairn (http://lugocorp.net) -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,19 +11,16 @@
 
   <!-- Navigation -->
   <div class="navigation">
+  <h1>Edhaus Consulting, LLC</h1>
   <span>
-    <!--<span class="dropdown">Home</span>
-    <div class="options">
-      <a href="../">Home</a>
-      <a href="../team">Team</a>
-    </div>-->
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Products & Services</span>
+    <span class="dropdown">Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
+      <a href="../workshops">Trainings & Workshops</a>
     </div>
   </span>
   <span>
@@ -80,7 +78,7 @@
       <div class="client">
         <div>
           <a href="http://marylandpublicschools.org/Pages/default.aspx">
-            <img src="../res/mddoe.png" title="Maryland State Department of Education"/>
+            <img src="../res/mddoe.png" title="Maryland State Department of Education" class="black-img"/>
           </a>
         </div>
       </div>
@@ -95,6 +93,48 @@
         <div>
           <a href="http://www.ascd.org/Default.aspx">
             <img src="../res/ascd.png" title="ASCD"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://www.alhudaschoolmd.org/">
+            <img src="../res/al-huda.png" title="Al-Huda School"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://alrahmah.org/">
+            <img src="../res/alrahmah.png" title="Al-Rahmah School"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://icclmd.org/">
+            <img src="../res/iccl.png" title="ICCL Academy"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://mccmd.org/">
+            <img src="../res/mcc.png" title="Muslim Community Center"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://www.mdtesol.org/">
+            <img src="../res/mdtesol.png" title="MDTESOL" class="black-img"/>
+          </a>
+        </div>
+      </div>
+      <div class="client">
+        <div>
+          <a href="https://www.mmlearningcenter.net/">
+            <img src="../res/mmacademy.png" title="M&M Academy"/>
           </a>
         </div>
       </div>
