--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -1,3 +1,4 @@
+<!-- Built via Cairn (http://lugocorp.net) -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,19 +11,16 @@
 
   <!-- Navigation -->
   <div class="navigation">
+  <h1>Edhaus Consulting, LLC</h1>
   <span>
-    <!--<span class="dropdown">Home</span>
-    <div class="options">
-      <a href="../">Home</a>
-      <a href="../team">Team</a>
-    </div>-->
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Products & Services</span>
+    <span class="dropdown">Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
+      <a href="../workshops">Trainings & Workshops</a>
     </div>
   </span>
   <span>
@@ -50,7 +48,7 @@
     <!-- Testimonials -->
     <div class="section testimonials">
       <div>
-        <h2>U.S. Embassy in Nepal (by Amanda Jacobson, (Cultural Affairs Officer)</h2>
+        <h2>U.S. Embassy in Nepal (by Amanda Jacobson, Cultural Affairs Officer)</h2>
         <p>
           The Public Affairs Section of the U.S. Embassy in Nepal programmed Ms. Farhana Shah with
           the State Department's U.S. Speaker program in 2011. Over the course of ten days Ms. Shah
@@ -66,27 +64,27 @@
         </p>
       </div>
       <div>
+        <h2>Rahmah School Teacher, Maryland</h2>
         <p>
-          <b><i>"There were some ideas that I feel that I could implement into my classroom immediately."</i></b>
-          Rahmah School Teacher, Maryland
+          There were some ideas that I feel that I could implement into my classroom immediately.
         </p>
       </div>
       <div>
+        <h2>Montgomery County Public School Teacher, Maryland</h2>
         <p>
-          <b><i>"An open, understanding, and welcoming environment was created right from the start. The instructor was kind, listened carefully and actively."</i></b>
-          Montgomery County Public School Teacher, Maryland
+          An open, understanding, and welcoming environment was created right from the start. The instructor was kind, listened carefully and actively.
         </p>
       </div>
       <div>
+        <h2>Durso, Board of Education President, Maryland (2018)</h2>
         <p>
-          <b><i>"Best course, what I learned in three hours was more than in other full day courses."</i></b>
-          Durso, Board of Education President, Maryland (2018)
+          Best course, what I learned in three hours was more than in other full day courses.
         </p>
       </div>
       <div>
+        <h2>Ms. Joyce, Montgomery County Public School Teacher, Maryland</h2>
         <p>
-          <b><i>"I love the fact that the major components of the Islam were explained in a way that was easy to understand and connect. I feel very empowered after this session and more connected to my Muslim students. Knowledge is power. Thank you for this gift!"</i></b>
-          Ms. Joyce, Montgomery County Public School Teacher, Maryland
+          I love the fact that the major components of the Islam were explained in a way that was easy to understand and connect. I feel very empowered after this session and more connected to my Muslim students. Knowledge is power. Thank you for this gift!
         </p>
       </div>
     </div>
