--- a/workshops/index.html
+++ b/workshops/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
 <link rel="stylesheet" href="../style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edhaus - Products & Services</title>
+  <title>Edhaus - Trainings & Workshops</title>
 </head>
 <body>
 
@@ -42,34 +42,27 @@
 
     <!-- Splash -->
     <div class="splash">
-      <h1>Products & Services</h1>
+      <h1>Trainings & Workshops</h1>
     </div>
 
     <!-- Team -->
     <div class="section services">
 
-      <h2>Online Teacher Performance and Evaluation System</h2>
+      <!--<h2>New Trainings 2020 <img class="new" src="../res/starburst.svg"/></h2>
       <ul>
-        <li>Formal Evaluation</li>
-        <li>Informal Observations</li>
-        <li>Classroom Walk-through</li>
-        <li>Teacher Self-Assessment and Student Feedback</li>
-        <li>Grade Monitoring (coming soon)</li>
-        <li>Digital Lesson Plan Book (coming soon)</li>
-      </ul>
+        <li>Brain-based Teaching and Learning</li>
+        <li>Distance Learning Strategies</li>
+        <li>Building Empathy</li>
+        <li>Elections and Voting 101 for Youth</li>
+        <li>Race Talks for Muslims</li>
+      </ul>-->
 
-      <h2>English Language Curriculum (coming soon)</h2>
-
-      <h2>Online Tutoring Platform (coming soon)</h2>
-
-      <h2>Trainings and Workshops for Educational Organizations</h2>
+      <h2>Professional Development Areas</h2>
       <ul>
-        <li>Management</li>
-        <li>Instruction</li>
+        <li>Leadership and Management</li>
         <li>Assessment</li>
-        <li>Differentiation</li>
-        <li>Special Needs</li>
-        <li>English Learners</li>
+        <li>Root Cause Analysis</li>
+        <li>Instruction</li>
         <li>Diversity</li>
       </ul>
 
