--- a/contact/index.html
+++ b/contact/index.html
@@ -1,3 +1,4 @@
+<!-- Built via Cairn (http://lugocorp.net) -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,19 +11,16 @@
 
   <!-- Navigation -->
   <div class="navigation">
+  <h1>Edhaus Consulting, LLC</h1>
   <span>
-    <!--<span class="dropdown">Home</span>
-    <div class="options">
-      <a href="../">Home</a>
-      <a href="../team">Team</a>
-    </div>-->
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Products & Services</span>
+    <span class="dropdown">Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
+      <a href="../workshops">Trainings & Workshops</a>
     </div>
   </span>
   <span>
@@ -57,7 +55,7 @@
     </div>
     <div class="section contacts">
 
-      <div class="contact-info">
+      <!--<div class="contact-info">
         <div class="icon">
           <img src="../res/blue-twitter.svg"/>
         </div>
@@ -85,7 +83,7 @@
           <h2>LinkedIn</h2>
           <a href="https://www.linkedin.com/in/farhanashah/">Farhana N. Shah</a>
         </div>
-      </div>
+      </div>-->
 
       <div class="contact-info">
         <div class="icon">
@@ -93,7 +91,7 @@
         </div>
         <div class="link">
           <h2>Email</h2>
-          <a href="mailto:farhana@shah.org">farhana@shah.org</a>
+          <a href="mailto:edhausconsulting@gmail.com">edhausconsulting@gmail.com</a>
         </div>
       </div>
 
