--- a/publications/index.html
+++ b/publications/index.html
@@ -1,3 +1,4 @@
+<!-- Built via Cairn (http://lugocorp.net) -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,19 +11,16 @@
 
   <!-- Navigation -->
   <div class="navigation">
+  <h1>Edhaus Consulting, LLC</h1>
   <span>
-    <!--<span class="dropdown">Home</span>
-    <div class="options">
-      <a href="../">Home</a>
-      <a href="../team">Team</a>
-    </div>-->
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Products & Services</span>
+    <span class="dropdown">Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
+      <a href="../workshops">Trainings & Workshops</a>
     </div>
   </span>
   <span>
