--- a/services/index.html
+++ b/services/index.html
@@ -11,12 +11,12 @@
 
   <!-- Navigation -->
   <div class="navigation">
-  <h1>Edhaus Consulting, LLC</h1>
+  <h1>Edhaus Consulting</h1>
   <span>
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Services</span>
+    <span class="dropdown">Products & Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
@@ -62,7 +62,7 @@
 
       <h2>Online Tutoring Platform (coming soon)</h2>
 
-      <h2>Trainings and Workshops for Educational Organizations</h2>
+      <h2>Trainings and Workshops</h2>
       <ul>
         <li>Management</li>
         <li>Instruction</li>
@@ -70,8 +70,9 @@
         <li>Differentiation</li>
         <li>Special Needs</li>
         <li>English Learners</li>
-        <li>Diversity</li>
       </ul>
+
+      <h2>Diversity and Inclusion (coming soon)</h2>
 
     </div>
 
