--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
   <!-- Navigation -->
   <div class="navigation">
-  <h1>Edhaus Consulting, LLC</h1>
+  <h1>Edhaus Consulting</h1>
   <span>
     <a href="./">About</a>
   </span>
   <span>
-    <span class="dropdown">Services</span>
+    <span class="dropdown">Products & Services</span>
     <div class="options">
       <a href="./clients">Clients</a>
       <a href="./services">Products & Services</a>
@@ -108,7 +108,7 @@
             career spans over 20 years of teaching in the classroom, leading teams,
             evaluating teachers, and providing staff development in the U.S. and
             abroad. She possesses a proven history of successfully implementing key
-            development and growth strategies.
+            development and growth in both education and non-education sectors.
           </p>
         </div>
       </div>
