--- a/workshops/index.html
+++ b/workshops/index.html
@@ -11,12 +11,12 @@
 
   <!-- Navigation -->
   <div class="navigation">
-  <h1>Edhaus Consulting, LLC</h1>
+  <h1>Edhaus Consulting</h1>
   <span>
     <a href="../">About</a>
   </span>
   <span>
-    <span class="dropdown">Services</span>
+    <span class="dropdown">Products & Services</span>
     <div class="options">
       <a href="../clients">Clients</a>
       <a href="../services">Products & Services</a>
