--- a/services/index.html
+++ b/services/index.html
@@ -72,7 +72,12 @@
         <li>English Learners</li>
       </ul>
 
-      <h2>Diversity and Inclusion (coming soon)</h2>
+      <h2>Diversity and Inclusion</h2>
+      <ul>
+        <li>K-12 Educators and Students</li>
+        <li>Higher Education</li>
+        <li>Muslim Professionals in the Workplace</li>
+      </ul>
 
     </div>
 
